# sketchy

./: .gitignore  Cargo.toml  LICENSE.md  README.md
frontend/: index.html  script.js  styles.css
src/: errors.rs  handlers.rs  main.rs  models.rs
src/mcp/: mod.rs
src/services/: image_processor.rs  llm_service.rs  mod.rs  redis_service.rs
