[package]
name = "sketchy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
base64 = "0.21"
image = "0.24"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
async-trait = "0.1"
bytes = "1.5"
anyhow = "1.0"
actix-files = "0.6"

# For MCP integration
jsonrpc = "0.13"